@@ -37,22 +37,22 @@ void
 ha_node_set_data_func(
 /*==================*/
 	ha_node_t*	node,	/* in: hash chain node */
-#ifdef UNIV_DEBUG
+#if defined UNIV_AHI_DEBUG || defined UNIV_DEBUG
 	buf_block_t*	block,	/* in: buffer block containing the data */
-#endif /* UNIV_DEBUG */
+#endif /* UNIV_AHI_DEBUG || UNIV_DEBUG */
 	void*		data)	/* in: pointer to the data */
 {
-#ifdef UNIV_DEBUG
+#if defined UNIV_AHI_DEBUG || defined UNIV_DEBUG
 	node->block = block;
-#endif /* UNIV_DEBUG */
+#endif /* UNIV_AHI_DEBUG || UNIV_DEBUG */
 	node->data = data;
 }
 
-#ifdef UNIV_DEBUG
+#if defined UNIV_AHI_DEBUG || defined UNIV_DEBUG
 # define ha_node_set_data(n,b,d) ha_node_set_data_func(n,b,d)
-#else /* UNIV_DEBUG */
+#else /* UNIV_AHI_DEBUG || UNIV_DEBUG */
 # define ha_node_set_data(n,b,d) ha_node_set_data_func(n,d)
-#endif /* UNIV_DEBUG */
+#endif /* UNIV_AHI_DEBUG || UNIV_DEBUG */
 
 /**********************************************************************
 Gets the next node in a hash chain. */
